--- a/www/ui/milestone10x_screens/2-1-4-0.html
+++ b/www/ui/milestone10x_screens/2-1-4-0.html
@@ -157,14 +157,11 @@
 		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<td><strong>"enter issue" options:</strong></td>
-			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<td><strong>attribute groups options:</strong></td>
+			<td><strong>general functions:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
 			</tr>
 			<tr>
 			<td><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="preview" class="button" /></td>
-			<td><input type="submit" value="add" class="button" />&#160;<input type="submit" value="delete" class="button" />&#160;<input type="submit" value="resort" class="button" /></td>
 
 			</tr>
 			</table>
@@ -293,13 +290,10 @@
 		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<td><strong>"enter issue" options:</strong></td>
-			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
 			<td><strong>attribute groups options:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
 			</tr>
 			<tr>
-			<td><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="preview" class="button" /></td>
 			<td><input type="submit" value="add" class="button" />&#160;<input type="submit" value="delete" class="button" />&#160;<input type="submit" value="resort" class="button" /></td>
 
 			</tr>
@@ -311,7 +305,7 @@
 <br>
 	<table cellpadding="3" cellspacing="0" width="100%" border="2">
 	<tr bgcolor="#ff0000" nowrap="nowrap">
-	<td>2. Duplicate check: "screen 1" information checked against existing issues</td>
+	<td>2. Duplicate check: attribute groups above this point checked against existing issues for duplicate data</td>
 	<td><input type="submit" value="up" />&nbsp;<input type="submit" value="down" /></td>
 	</tr>
 	</table>
@@ -417,7 +411,7 @@
 		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<td><strong>"enter issue" options:</strong></td>
+			<td><strong>general functions:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
 			<td><strong>attribute groups options:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
