--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -21,7 +21,7 @@
 
 <h2>Scarab UI</h2>
 
-<em>$Id: index.html,v 1.36 2001/09/28 18:06:00 Matthew Exp $ <a href=""></a></em>
+<em>$Id: index.html,v 1.37 2001/10/01 18:10:06 jon Exp $ <a href=""></a></em>
 
 
 <ul>
@@ -60,7 +60,7 @@
 		</tr>
 
 		<tr class="b">
-		<td><a href="./milestone10x_screens/2-1-4-0.html">2.1.4.0</a></td>	
+		<td><a href="./milestone10x_screens/2-1-4-0b.html">2.1.4.0</a></td>	
 		<td>Customize / create "enter issue" (Module Attribute Editor)</td>	
 		<td>?</td>
 		</tr>
