--- a/www/ui/milestone10x_screens/2-1-4-0b.html
+++ b/www/ui/milestone10x_screens/2-1-4-0b.html
@@ -141,7 +141,7 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-1-4-0">
-		<h2>Customize / create "enter issue" (2.1.4.0) milestone10 ver.</h2>
+		<h2>Customize / create "enter issue" (2.1.4.0)</h2>
 
 		
 		<div id="tabs">
@@ -157,12 +157,11 @@
 		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<td><strong>general functions:</strong></td>
+			<td><strong>attribute groups options:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
 			</tr>
 			<tr>
-			<td><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="preview" class="button" /></td>
-
+			<td><input type="submit" value="add" class="button" />&#160;<input type="submit" value="delete" class="button" />&#160;<input type="submit" value="resort" class="button" /></td>
 			</tr>
 			</table>
 		</div>
@@ -189,6 +188,23 @@
 		</select>
 		most recent comments (otherwise, a link will appear to a seperate page).
 		</p>
+
+
+		<div class="functnbar">
+			<table cellpadding="0" cellspacing="0" border="0">
+
+			<tr>
+			<td><strong>"Issue history" and "Comments" display options:</strong></td>
+			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+			</tr>
+
+			<tr>
+			<td><input type="submit" value="submit changes" class="button" />&#160;<input type="submit" value="cancel" class="button" /></td>
+
+			</tr>
+			</table>
+		</div>
+
 						
 		<h3>Attribute group one</h3>
 		
@@ -283,12 +299,12 @@
 		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<td><strong>attribute groups options:</strong></td>
+			<td><strong>attribute group 1:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+
 			</tr>
 			<tr>
-			<td><input type="submit" value="add" class="button" />&#160;<input type="submit" value="delete" class="button" />&#160;<input type="submit" value="resort" class="button" /></td>
-
+			<td><input type="submit" value="submit changes" class="button" />&#160;<input type="submit" value="cancel" class="button" /></td>
 			</tr>
 			</table>
 		</div>
@@ -339,18 +355,20 @@
 
 
 
+
 		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<td><strong>attribute groups options:</strong></td>
+			<td><strong>attribute group 2:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+
 			</tr>
 			<tr>
-			<td><input type="submit" value="add" class="button" />&#160;<input type="submit" value="delete" class="button" />&#160;<input type="submit" value="resort" class="button" /></td>
-
+			<td><input type="submit" value="submit changes" class="button" />&#160;<input type="submit" value="cancel" class="button" /></td>
 			</tr>
 			</table>
 		</div>
+		
 		
 
 
@@ -366,7 +384,7 @@
 		</tr>
 		<tr class="a">
 		<td>&nbsp;</td>
-		<td><input type="text" size="25" class="text" value="Duplicate check" /></td>
+		<td>Duplicate check</td>
 		<td><input type="checkbox" checked="checked" /></td>
 		<td>
 		<select class="select">
@@ -466,21 +484,24 @@
 		<p><input type="submit" value="add attribute" class="button" />&#160;<input type="submit" value="delete selected" class="button" />&#160;<input type="submit" value="resort attributes in this group" class="button" /></p><br>
 		
 
+
 		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<td><strong>general functions:</strong></td>
+			<td><strong>attribute group 3:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+
 			<td><strong>attribute groups options:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
 			</tr>
 			<tr>
-			<td><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="preview" class="button" /></td>
+			<td><input type="submit" value="submit changes" class="button" />&#160;<input type="submit" value="cancel" class="button" /></td>
+			
 			<td><input type="submit" value="add" class="button" />&#160;<input type="submit" value="delete" class="button" />&#160;<input type="submit" value="resort" class="button" /></td>
-
 			</tr>
 			</table>
 		</div>
+		
 		
 
 	<!-- Scarab - App -->
