--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -21,7 +21,7 @@
 
 <h2>Scarab UI</h2>
 
-<em>$Id: index.html,v 1.39 2001/10/01 22:23:00 jon Exp $ <a href=""></a></em>
+<em>$Id: index.html,v 1.40 2001/10/04 23:26:18 braino Exp $ <a href=""></a></em>
 
 
 <ul>
@@ -66,48 +66,55 @@
 		</tr>
 
 		<tr class="a">
+		<td><a href="./milestone1x_screens/2-1-4-1.html">2.1.4.1</a></td>	
+		<td>Add/edit attribute group</td>	
+		<td>>not defined</td>
+		</tr>
+
+
+		<tr class="b">
 		<td><a href="./milestone1x_screens/3-0-1.html">3.0.1</a></td>	
 		<td>2.1.4.0->add attribute (3.0.1)</td>	
 		<td>GlobalAttributeSelect.vm</td>
 		</tr>
 
-		<tr class="b">
+		<tr class="a">
 		<td><a href="./milestone1x_screens/2-6-1.html">2.6.1</a></td>
 		<td>Issue Detail</td>
 		<td>? - suggest 'IssDet.vm'</td>
 		</tr>
 		
-		<tr class="a">
+		<tr class="b">
 		<td><a href="./milestone1x_screens/2-6-2.html">2.6.2</a></td>
 		<td>Issue Detail Long Form</td>
 		<td>? - suggest 'IssDetLonFor.vm'</td>
 		</tr>
 		
-		<tr class="b">
+		<tr class="a">
 		<td><a href="./milestone1x_screens/3-0-0.html">3.0.0</a></td>
 		<td>Global Attributes</td>
 		<td>admin/AttributeShow.vm</td>
 		</tr>
 		
-		<tr class="a">
+		<tr class="b">
 		<td><a href="./milestone1x_screens/3-0-2-0.html">3.0.2.0</a></td>
 		<td>Add / Edit Attribute</td>
 		<td>admin/AttributeEdit.vm</td>
 		</tr>
 		
-		<tr class="b">
+		<tr class="a">
 		<td><a href="./milestone1x_screens/3-0-2-0_step1.html">3.0.2.0 step 1</a></td>
 		<td>Add / Edit Attribute step 1</td>
 		<td>? - is this a state of AttributeEdit?</td>
 		</tr>
 		
-		<tr class="a">
+		<tr class="b">
 		<td><a href="./milestone1x_screens/3-0-2-0_step2.html">3.0.2.0 step 2</a></td>
 		<td>Add / Edit Attribute step 2</td>
 		<td>? - is this a state of AttributeEdit?</td>
 		</tr>
 		
-		<tr class="b">
+		<tr class="a">
 		<td><a href="./milestone1x_screens/funct_dir.html">funct_dir</a></td>
 		<td>User home screen</td>
 		<td>na</td>
